--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile-ts": "rm -rf lib && tsc",
-    "test": "npx mocha --require ts-node/register"
+    "test-mocha": "npx mocha --require ts-node/register",
+    "test": "npx truffle test"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "typescript": "^3.2.1"
   },
   "dependencies": {
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.12",
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.36"
